+ Risolto problema del path relativo e aggiunta colonna sonora